--- a/crafting.html
+++ b/crafting.html
@@ -38,7 +38,23 @@
                 </select>
             </div>
             <div class="craft-grid" id="craft-grid-container">
+                <div class="craft-item" data-name="Деревянная кирка" data-category="Инструменты">
+                    <img src="wooden_pickaxe_result.png" alt="Деревянная кирка">
+                    <h3>Деревянная кирка</h3>
+                    <div class="crafting-recipe-preview">
+                        <div class="grid-item"><img src="Oak_Planks.png" alt="Дубовые доски"></div>
+                        <div class="grid-item"><img src="Oak_Planks (1).png" alt="Дубовые доски"></div>
+                        <div class="grid-item"><img src="Oak_Planks (2).png" alt="Дубовые доски"></div>
+                        <div class="grid-item"></div>
+                        <div class="grid-item"><img src="Палка_JE1_BE1.webp" alt="Палка"></div>
+                        <div class="grid-item"></div>
+                        <div class="grid-item"></div>
+                        <div class="grid-item"><img src="Палка_JE1_BE1 (2).webp" alt="Палка"></div>
+                        <div class="grid-item"></div>
+                    </div>
+                    <p class="craft-description" style="display: none;">Деревянная кирка - это базовый инструмент, используемый для добычи камня и других ресурсов.</p>
                 </div>
+            </div>
         </section>
 
         <section class="craft-detail-page" id="craft-detail-page" style="display: none;">
@@ -48,7 +64,7 @@
                 <div class="crafting-recipe-display">
                     <img id="craft-detail-result-image" src="" alt="Результат крафта">
                     <div class="crafting-grid" id="craft-detail-grid">
-                        </div>
+                    </div>
                 </div>
                 <p><strong>Категория:</strong> <span id="craft-detail-category"></span></p>
                 <p id="craft-detail-description"></p>
