--- a/servers.html
+++ b/servers.html
@@ -25,43 +25,8 @@
     <main>
         <section class="servers-list">
             <h2>Популярные Сервера Minecraft</h2>
-            <div class="server-grid">
-                <div class="server-card">
-                    <img src="https://i.imgur.com/hypixel_logo.png" alt="Hypixel Logo" class="server-logo">
-                    <h3>Hypixel Network</h3>
-                    <p>Один из самых крупных и популярных серверов мини-игр в мире Minecraft. Тысячи игроков ежедневно соревнуются в SkyWars, Bed Wars, Murder Mystery и многих других режимах.</p>
-                    <div class="server-info">
-                        <span>Версия: 1.8 - 1.20+</span>
-                        <span class="ip-address" id="ip-hypixel">mc.hypixel.net</span>
-                    </div>
-                    <button class="copy-ip-btn" data-ip="mc.hypixel.net">Копировать IP</button>
-                    <a href="https://hypixel.net/" target="_blank" class="visit-website-btn">Перейти на сайт</a>
+            <div id="server-grid-container" class="server-grid">
                 </div>
-
-                <div class="server-card">
-                    <img src="https://i.imgur.com/mineplex_logo.png" alt="Mineplex Logo" class="server-logo">
-                    <h3>Mineplex</h3>
-                    <p>Ещё один легендарный сервер мини-игр с огромным выбором режимов, включая Death Tag, Super Smash Mobs, Bridges и Clans. Отличный выбор для активного времяпровождения.</p>
-                    <div class="server-info">
-                        <span>Версия: 1.8 - 1.20+</span>
-                        <span class="ip-address" id="ip-mineplex">us.mineplex.com</span>
-                    </div>
-                    <button class="copy-ip-btn" data-ip="us.mineplex.com">Копировать IP</button>
-                    <a href="https://www.mineplex.com/" target="_blank" class="visit-website-btn">Перейти на сайт</a>
-                </div>
-
-                <div class="server-card">
-                    <img src="https://i.imgur.com/vanilla_logo.png" alt="Vanilla Server Logo" class="server-logo">
-                    <h3>Vanilla Survival (Пример)</h3>
-                    <p>Классический сервер выживания (SMP) без лишних модификаций. Здесь вы можете строить, исследовать и выживать вместе с друзьями в чистом Minecraft. Отличное место для спокойной игры и творчества.</p>
-                    <div class="server-info">
-                        <span>Версия: 1.20.1</span>
-                        <span class="ip-address" id="ip-vanilla">play.yoursmp.com</span>
-                    </div>
-                    <button class="copy-ip-btn" data-ip="play.yoursmp.com">Копировать IP</button>
-                    <a href="#" target="_blank" class="visit-website-btn disabled-link">Сайт не требуется</a>
-                </div>
-            </div>
         </section>
     </main>
 
